--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^11.5.7",
     "gsap": "^3.12.5",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
