--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^11.5.7",
     "gsap": "^3.12.5",
+    "lenis": "^1.1.6",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "next-themes": "^0.3.0",
