--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^11.5.7",
+    "gsap": "^3.12.5",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "next-themes": "^0.3.0",
